--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
@@ -42,6 +43,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^23.2.0",
+    "lucide-react": "^0.525.0",
     "prettier": "^3.1.1",
     "prettier-plugin-astro": "^0.12.3",
     "typescript": "^5.3.3",
